--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <title>Title</title>
     <link
       href="https://fonts.googleapis.com/css?family=Baskervville&display=swap"
@@ -10,7 +12,15 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    What is this all about?
+    <div class="nav">
+      <span class="title">EMILIE GRAUL</span>
+      <div class="buttons">
+        <button class="nav-button">Colour Studio</button>
+        <button class="nav-button">Hack Reactor</button>
+        <button class="nav-button">Resume</button>
+        <button class="nav-button">Contact</button>
+      </div>
+    </div>
     <h1>
       Project Manager in San Francisco with expertise in design and operations.
     </h1>
