--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link href="styles.css" rel="stylesheet" />
+    <link href="mobile.css" rel="stylesheet" />
   </head>
   <body>
     <div class="nav">
@@ -46,7 +47,7 @@
           <p class="position-title">Project Manager & Design Associate</p>
           <p class="position-year">2017 - 2019</p>
         </div>
-        <div class="image right" style="width: 35%;">
+        <div class="image right">
           <img
             src="https://www.imgacademy.com/sites/default/files/venue-stadium-pg3.jpg"
           />
@@ -137,7 +138,7 @@
           <p class="position-title">Operations Associate</p>
           <p class="position-year">2015 - 2017</p>
         </div>
-        <div class="image right" style="width: 35%;">
+        <div class="image right">
           <img
             src="https://www.imgacademy.com/sites/default/files/venue-stadium-pg3.jpg"
           />
