animate hero text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="nav-button">Contact</button>
       </div>
     </div>
-    <h1>
+    <h1 id="hero" style="opacity: 0;">
       Project Manager in San Francisco with expertise in design and operations.
     </h1>
     <div class="section intro">
