saved real images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="nav">
-      <span class="title">EMILIE GRAUL</span>
+      <span class="title">Emilie Graul</span>
       <div class="buttons">
         <button class="nav-button">Colour Studio</button>
         <button class="nav-button">Hack Reactor</button>
@@ -28,9 +28,7 @@
     <div class="section intro">
       <div class="content">
         <div id="intro-photo" class="image">
-          <img
-            src="https://www.imgacademy.com/sites/default/files/venue-stadium-pg3.jpg"
-          />
+          <img src="images/hero.jpg" />
         </div>
         <p class="main-content">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -48,12 +46,9 @@
           <p class="position-year">2017 - 2019</p>
         </div>
         <div class="image right">
-          <img
-            src="https://www.imgacademy.com/sites/default/files/venue-stadium-pg3.jpg"
-          />
+          <img src="images/sculpting.png" />
           <p>
             Students paired up in our office working on coding challenges.
-            Something something about the office. A bit more yay.
           </p>
         </div>
 
@@ -72,9 +67,7 @@
         </p>
 
         <div class="image">
-          <img
-            src="https://www.imgacademy.com/sites/default/files/venue-stadium-pg3.jpg"
-          />
+          <img src="images/secret-garden.jpg" />
           <p>
             Students paired up in our office working on coding challenges.
             Something something about the office. A bit more yay.
@@ -86,6 +79,7 @@
           Project Manager and Design Associate at Colour Studio, and Operations
           Staff at Hack Reactor.
         </p>
+        <div class="image"><img src="images/Millberry%20Union.jpg" /></div>
       </div>
     </div>
     <div class="section apps">
@@ -138,34 +132,27 @@
           <p class="position-title">Operations Associate</p>
           <p class="position-year">2015 - 2017</p>
         </div>
-        <div class="image right">
-          <img
-            src="https://www.imgacademy.com/sites/default/files/venue-stadium-pg3.jpg"
-          />
+        <p class="main-content">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolor. Most recently working as
+          Project Manager and Design Associate at Colour Studio, and Operations
+          Staff at Hack Reactor.
+        </p>
+        <div class="image">
+          <img src="images/hr-office.jpg" />
           <p>
             Students paired up in our office working on coding challenges.
             Something something about the office. A bit more yay.
           </p>
         </div>
-
         <p class="main-content">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolor. Most recently working as
           Project Manager and Design Associate at Colour Studio, and Operations
           Staff at Hack Reactor.
         </p>
-
-        <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
-        </p>
-
         <div class="image">
-          <img
-            src="https://www.imgacademy.com/sites/default/files/venue-stadium-pg3.jpg"
-          />
+          <img src="images/HR-four-pairs.jpg" />
           <p>
             Students paired up in our office working on coding challenges.
             Something something about the office. A bit more yay.
@@ -179,7 +166,7 @@
         </p>
       </div>
     </div>
-    <div class="section apps">
+    <div class="section rtw">
       <div class="content">
         <div class="rtw-photos-wrapper"></div>
         <p class="main-content">
