update nav links

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <div class="nav">
       <span class="title">Emilie Graul</span>
       <div class="buttons">
-        <button class="nav-button">Colour Studio</button>
-        <button class="nav-button">Hack Reactor</button>
-        <button class="nav-button">Resume</button>
-        <button class="nav-button">Contact</button>
+        <a href="google.com" target="_blank" class="nav-button">Resume</a>
+        <a href="https://www.linkedin.com/in/emiliegraul/" target="_blank" class="nav-button">Contact</a>
       </div>
     </div>
     <h1 id="hero" style="opacity: 0;">
