--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Title</title>
+    <title>Emilie Graul - Project Manager</title>
     <link
       href="https://fonts.googleapis.com/css?family=Baskervville&display=swap"
       rel="stylesheet"
