--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
       <span class="title">Emilie Graul</span>
       <div class="buttons">
         <a href="google.com" target="_blank" class="nav-button">Resume</a>
-        <a href="https://www.linkedin.com/in/emiliegraul/" target="_blank" class="nav-button">Contact</a>
+        <a
+          href="https://www.linkedin.com/in/emiliegraul/"
+          target="_blank"
+          class="nav-button"
+          >Contact</a
+        >
       </div>
     </div>
     <h1 id="hero" style="opacity: 0;">
@@ -45,38 +50,50 @@
         <div class="image right">
           <img src="images/sculpting.png" />
           <p>
-            Students paired up in our office working on coding challenges.
+            Deliverables included thorough diagrams of building details like
+            these unique facades you see around San Francisco.
           </p>
         </div>
 
         <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
+          As Project Manager at this small design studio, I was responsible for
+          leading many local and national projects.
         </p>
 
         <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
+          I assisted in generating proposals, outlining scope, delegating
+          project tasks, and staying in daily coordination with clients,
+          architects, facility managers, developers, contractors, designers,
+          etc.
+        </p>
+
+        <p class="main-content">
+          One of the highlights of my job was being able to work on the older,
+          more ornate buildings of San Francisco. We had more freedom with these
+          projects to propose bright and intricate schemes.
         </p>
 
         <div class="image">
           <img src="images/secret-garden.jpg" />
           <p>
-            Students paired up in our office working on coding challenges.
-            Something something about the office. A bit more yay.
+            Color was meticulously matched from screen to print to real-life
+            application, guaranteeing an accurate portrayal from start to
+            finish.
           </p>
         </div>
         <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
+          During my time at Colour Studio I drove many projects to completion,
+          including multiple 100+ unit residential projects around San
+          Francisco, Oakland, Mountain View, San Diego, and Los Angeles.
         </p>
-        <div class="image"><img src="images/Millberry%20Union.jpg" /></div>
+        <div class="image">
+          <img src="images/Millberry%20Union.jpg" />
+          <p>
+            Our projects ranged in size from single unit Vicotrians in
+            residential neighborhoods, to multi-million dollar renovations of
+            the USCF campus.
+          </p>
+        </div>
       </div>
     </div>
     <div class="section apps">
@@ -115,10 +132,9 @@
           </div>
         </div>
         <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
+          Throughout my career I have utilized Adobe’s Creative Suite of tools,
+          Asana, and the Google Suite for project creation and workflow
+          improvement.
         </p>
       </div>
     </div>
