final text content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="nav">
       <span class="title">Emilie Graul</span>
       <div class="buttons">
-        <a href="google.com" target="_blank" class="nav-button">Resume</a>
+        <a href="na" target="_blank" class="nav-button">Resume</a>
         <a
           href="https://www.linkedin.com/in/emiliegraul/"
           target="_blank"
@@ -33,10 +33,11 @@
           <img src="images/hero.jpg" />
         </div>
         <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
+          My name is Emilie Graul, and I am a Project Manager and Designer
+          working for start-ups in San Francisco. I love making all the pieces
+          of the puzzle fit together, and would love to get started with your
+          team! Below I’ve outlined some of the highlights of the past few years
+          of my career.
         </p>
       </div>
     </div>
@@ -56,21 +57,24 @@
         </div>
 
         <p class="main-content">
-          As Project Manager at this small design studio, I was responsible for
-          leading many local and national projects.
+          The Colour Studio is a boutique color consultancy working primarily
+          with architecture firms in the Bay Area. As Project Manager and Design
+          Associate, I was responsible for leading many local and national
+          projects.
         </p>
 
         <p class="main-content">
           I assisted in generating proposals, outlining scope, delegating
-          project tasks, and staying in daily coordination with clients,
-          architects, facility managers, developers, contractors, designers,
-          etc.
+          project tasks, and the daily coordination with clients, architects,
+          facility managers, developers, contractors, designers, etc.
         </p>
 
         <p class="main-content">
           One of the highlights of my job was being able to work on the older,
           more ornate buildings of San Francisco. We had more freedom with these
-          projects to propose bright and intricate schemes.
+          projects to propose bright and intricate schemes. It’s a pleasure of
+          mine to spot building exteriors around the city that I had a hand in
+          creating.
         </p>
 
         <div class="image">
@@ -90,8 +94,8 @@
           <img src="images/Millberry%20Union.jpg" />
           <p>
             Our projects ranged in size from single unit Vicotrians in
-            residential neighborhoods, to multi-million dollar renovations of
-            the USCF campus.
+            residential neighborhoods, to multi-million dollar renovations like
+            that of the USCF campus.
           </p>
         </div>
       </div>
@@ -132,9 +136,9 @@
           </div>
         </div>
         <p class="main-content">
-          Throughout my career I have utilized Adobe’s Creative Suite of tools,
-          Asana, and the Google Suite for project creation and workflow
-          improvement.
+          With years of experience serving as a project manager and designer, I
+          have built up experience with Adobe’s Creative Suite, and general
+          management tools like Asana, Excel, Concur, etc.
         </p>
       </div>
     </div>
@@ -146,36 +150,35 @@
           <p class="position-year">2015 - 2017</p>
         </div>
         <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
+          Hack Reactor is a premier coding bootcamp in San Francisco. During a
+          three month program, students are trained as software engineers and
+          guided into the industry. As an Operations Associate, I had a
+          front-facing role with students and coworkers.
         </p>
         <div class="image">
           <img src="images/hr-office.jpg" />
           <p>
-            Students paired up in our office working on coding challenges.
-            Something something about the office. A bit more yay.
+            Students paired up in our office working on coding challenges. We
+            supported 4 cohorts of 40+ students at a time.
           </p>
         </div>
         <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
+          Constant office upkeep was critical as students and staff would be in
+          the space from early morning to late at night. It was important to
+          ensure everything was properly cleaned and stocked every day for the
+          50+ staff members and 200+ students.
         </p>
         <div class="image">
           <img src="images/HR-four-pairs.jpg" />
           <p>
-            Students paired up in our office working on coding challenges.
-            Something something about the office. A bit more yay.
+            I was always on hand to resolve any IT related issues for students
+            and staff.
           </p>
         </div>
         <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
+          During my time at Hack Reactor, as the company grew and acquired
+          smaller bootcamp start-ups, I assisted in the moving and opening of 3
+          locations.
         </p>
       </div>
     </div>
@@ -183,10 +186,11 @@
       <div class="content">
         <div class="rtw-photos-wrapper"></div>
         <p class="main-content">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolor. Most recently working as
-          Project Manager and Design Associate at Colour Studio, and Operations
-          Staff at Hack Reactor.
+          By the way! I spent 5 months traveling around the world, visiting 12
+          different countries. I met some amazing people, stayed in some
+          beautiful cities, and ate some delicious food. I learned a lot about
+          different cultures, but also about myself in the process. Ask me about
+          it!
         </p>
       </div>
     </div>
