--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <h1 id="hero" style="opacity: 0;">
-      Project Manager in San Francisco with expertise in design and operations.
+      Project Manager based in San Francisco with expertise in design and operations.
     </h1>
     <div class="section intro">
       <div class="content">
