remove resume link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <div class="nav">
       <span class="title">Emilie Graul</span>
       <div class="buttons">
-        <a href="na" target="_blank" class="nav-button">Resume</a>
         <a
           href="https://www.linkedin.com/in/emiliegraul/"
           target="_blank"
@@ -186,7 +185,7 @@
       <div class="content">
         <div class="rtw-photos-wrapper"></div>
         <p class="main-content">
-          By the way! I spent 5 months traveling around the world, visiting 12
+          By the way! I most recently spent 5 months traveling around the world, visiting 12
           different countries. I met some amazing people, stayed in some
           beautiful cities, and ate some delicious food. I learned a lot about
           different cultures, but also about myself in the process. Ask me about
