--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="image">
           <img src="images/Millberry%20Union.jpg" />
           <p>
-            Our projects ranged in size from single unit Vicotrians in
+            Our projects ranged in size from single unit Victorians in
             residential neighborhoods, to multi-million dollar renovations like
             that of the USCF campus.
           </p>
