--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <img src="images/sculpting.png" />
           <p>
             Deliverables included thorough diagrams of building details like
-            these unique facades you see around San Francisco.
+            these unique facades seen around San Francisco.
           </p>
         </div>
 
