--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </div>
         </div>
         <p class="main-content">
-          With years of experience serving as a project manager and designer, I
+          Working for years as a project manager and designer, I
           have built up experience with Adobe’s Creative Suite, and general
           management tools like Asana, Excel, Concur, etc.
         </p>
