--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       </div>
     </div>
     <h1 id="hero" style="opacity: 0;">
-      Project Manager based in San Francisco with expertise in design and operations.
+      Project Manager based in San Francisco with expertise in design and
+      operations.
     </h1>
     <div class="section intro">
       <div class="content">
@@ -32,11 +33,11 @@
           <img src="images/hero.jpg" />
         </div>
         <p class="main-content">
-          My name is Emilie Graul, and I am a Project Manager and Designer
-          working for start-ups in San Francisco. I love making all the pieces
-          of the puzzle fit together, and would love to get started with your
-          team! Below I’ve outlined some of the highlights of the past few years
-          of my career.
+          Hello! My name is Emilie Graul, and I'm a Project Manager and Designer
+          with experience working for start-ups in San Francisco. I love making
+          all the pieces of the puzzle fit together, and would love to get
+          started with your team! Below I’ve outlined some of the highlights of
+          the past few years of my career.
         </p>
       </div>
     </div>
@@ -56,32 +57,35 @@
         </div>
 
         <p class="main-content">
-          The Colour Studio is a boutique color consultancy working primarily
-          with architecture firms in the Bay Area. As Project Manager and Design
-          Associate, I was responsible for leading many local and national
-          projects.
+          The Colour Studio is a boutique color consultancy which has operated
+          in San Francisco for over forty years. The company works primarily
+          with architecture firms in the Bay Area supporting the massive
+          development in the area, but also in various cities throughout
+          California. As Project Manager and Design Associate, I was responsible
+          for leading many local and national projects.
         </p>
 
         <p class="main-content">
-          I assisted in generating proposals, outlining scope, delegating
-          project tasks, and the daily coordination with clients, architects,
-          facility managers, developers, contractors, designers, etc.
+          My responsibilities at the company included generating proposals,
+          outlining scope, delegating project tasks, and maintaining daily
+          coordination with clients, architects, facility managers, developers,
+          contractors, designers, etc.
         </p>
 
         <p class="main-content">
-          One of the highlights of my job was being able to work on the older,
-          more ornate buildings of San Francisco. We had more freedom with these
-          projects to propose bright and intricate schemes. It’s a pleasure of
-          mine to spot building exteriors around the city that I had a hand in
-          creating.
+          One of the highlights of my experience there was working with the
+          older, more ornately-styled buildings of San Francisco. We enjoyed
+          designing bright and intricate schemes for these unique units. It’s
+          now a pleasure of mine to spot building exteriors around the city that
+          I had a hand in creating.
         </p>
 
         <div class="image">
           <img src="images/secret-garden.jpg" />
           <p>
-            Color was meticulously matched from screen to print to real-life
-            application, guaranteeing an accurate portrayal from start to
-            finish.
+            At every step, colors were meticulously matched from digital
+            screens, to ink prints, to final paint applications, guaranteeing an
+            accurate portrayal from start to finish.
           </p>
         </div>
         <p class="main-content">
@@ -94,7 +98,7 @@
           <p>
             Our projects ranged in size from single unit Victorians in
             residential neighborhoods, to multi-million dollar renovations like
-            that of the USCF campus.
+            that of the UCSF campus.
           </p>
         </div>
       </div>
@@ -135,9 +139,9 @@
           </div>
         </div>
         <p class="main-content">
-          Working for years as a project manager and designer, I
-          have built up experience with Adobe’s Creative Suite, and general
-          management tools like Asana, Excel, Concur, etc.
+          I am experienced with Adobe’s Creative Suite — especially InDesign,
+          Illustrator, and Photoshop, and general management tools like Asana,
+          Excel, Concur, et al.
         </p>
       </div>
     </div>
@@ -157,15 +161,15 @@
         <div class="image">
           <img src="images/hr-office.jpg" />
           <p>
-            Students paired up in our office working on coding challenges. We
-            supported 4 cohorts of 40+ students at a time.
+            Students paired up in our office working on coding challenges. Our
+            operations team supported 4 cohorts of 40+ students at a time.
           </p>
         </div>
         <p class="main-content">
           Constant office upkeep was critical as students and staff would be in
           the space from early morning to late at night. It was important to
-          ensure everything was properly cleaned and stocked every day for the
-          50+ staff members and 200+ students.
+          ensure everything was properly prepared for the 50+ staff members and
+          200+ students.
         </p>
         <div class="image">
           <img src="images/HR-four-pairs.jpg" />
@@ -175,9 +179,8 @@
           </p>
         </div>
         <p class="main-content">
-          During my time at Hack Reactor, as the company grew and acquired
-          smaller bootcamp start-ups, I assisted in the moving and opening of 3
-          locations.
+          As the company grew and acquired smaller bootcamp start-ups, I
+          assisted in the moving and opening of 3 locations.
         </p>
       </div>
     </div>
@@ -185,11 +188,11 @@
       <div class="content">
         <div class="rtw-photos-wrapper"></div>
         <p class="main-content">
-          By the way! I most recently spent 5 months traveling around the world, visiting 12
-          different countries. I met some amazing people, stayed in some
-          beautiful cities, and ate some delicious food. I learned a lot about
-          different cultures, but also about myself in the process. Ask me about
-          it!
+          By the way! I most recently spent 5 months traveling around the world,
+          visiting 12 different countries. I met some amazing people, stayed in
+          some beautiful cities, and ate some delicious food. I learned a lot
+          about different cultures, but also about myself in the process. Ask me
+          about it!
         </p>
       </div>
     </div>
