tweak app content

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <p class="main-content">
           I am experienced with Adobe’s Creative Suite — especially InDesign,
-          Illustrator, and Photoshop, and general management tools like Asana,
+          Illustrator, and Photoshop — and general management tools like Asana,
           Excel, Concur, et al.
         </p>
       </div>
