--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         >
       </div>
     </div>
-    <h1 id="hero" style="opacity: 0;">
+    <h1 id="hero" style="opacity: 0">
       Project Manager based in San Francisco with expertise in design and
       operations.
     </h1>
@@ -33,23 +33,23 @@
           <img src="images/hero.jpg" />
         </div>
         <p class="main-content">
-          Hello! My name is Emilie Graul, and I'm a Project Manager and Designer
-          with experience working for start-ups in San Francisco. I love making
-          all the pieces of the puzzle fit together, and would love to get
-          started with your team! Below I’ve outlined some of the highlights of
-          the past few years of my career.
+          Hello! My name is Emilie Graul, and I’m a Project Manager and Designer
+          with experience working for creative companies and startups. I enjoy
+          seeing a project through from start to finish and developing
+          professional relationships along the way. Below I’ve outlined some of
+          the highlights of the past few years of my career.
         </p>
       </div>
     </div>
-    <div class="section colour-studio">
+    <div class="section hulburd-design">
       <div class="content">
         <div class="job-header">
-          <h2>Colour Studio</h2>
-          <p class="position-title">Project Manager & Design Associate</p>
-          <p class="position-year">2017 - 2019</p>
+          <h2>Hulburd Design</h2>
+          <p class="position-title">Designer & Project Manager</p>
+          <p class="position-year">2021 - Present</p>
         </div>
         <div class="image right">
-          <img src="images/sculpting.png" />
+          <img src="images/hulburd-room.png" />
           <p>
             Deliverables included thorough diagrams of building details like
             these unique facades seen around San Francisco.
@@ -57,48 +57,40 @@
         </div>
 
         <p class="main-content">
-          The Colour Studio is a boutique color consultancy which has operated
-          in San Francisco for over forty years. The company works primarily
-          with architecture firms in the Bay Area supporting the massive
-          development in the area, but also in various cities throughout
-          California. As Project Manager and Design Associate, I was responsible
-          for leading many local and national projects.
+          Hulburd Design is an established architecture and design firm
+          specializing in high-end residential and commercial architecture,
+          interior design, and furniture design. I track and manage the progress
+          of many local, national, and international projects at various stages.
         </p>
 
         <p class="main-content">
-          My responsibilities at the company included generating proposals,
-          outlining scope, delegating project tasks, and maintaining daily
-          coordination with clients, architects, facility managers, developers,
-          contractors, designers, etc.
+          I collaborate with the Principal in FF&E (Furniture, Fixture, and
+          Equipment) selection and placement, create presentations, and present
+          to clients. Once our team and clients make decisions, I acquire
+          proposals and oversee purchasing, invoicing, order tracking, and
+          installation. I also generate and update furniture schedules, keeping
+          track of every detail and stage of items in a project.
         </p>
-
-        <p class="main-content">
-          One of the highlights of my experience there was working with the
-          older, more ornately-styled buildings of San Francisco. We enjoyed
-          designing bright and intricate schemes for these unique units. It’s
-          now a pleasure of mine to spot building exteriors around the city that
-          I had a hand in creating.
-        </p>
-
-        <div class="image">
-          <img src="images/secret-garden.jpg" />
+        <div class="image left">
+          <img src="images/hulburd-cad.png" />
           <p>
-            At every step, colors were meticulously matched from digital
-            screens, to ink prints, to final paint applications, guaranteeing an
-            accurate portrayal from start to finish.
+            AutoCAD is utilized to envision furniture and accessory placement
+            for client presentations and for use in final installation.
           </p>
         </div>
+
         <p class="main-content">
-          During my time at Colour Studio I drove many projects to completion,
-          including multiple 100+ unit residential projects around San
-          Francisco, Oakland, Mountain View, San Diego, and Los Angeles.
+          One of the best parts of this job is the people I meet. I establish
+          and maintain close relationships with vendors, architects,
+          contractors, and clients, creating an established network of talented
+          people whom I’m always learning and drawing inspiration from.
         </p>
+
         <div class="image">
-          <img src="images/Millberry%20Union.jpg" />
+          <img src="images/hulburd-fabrics.png" />
           <p>
-            Our projects ranged in size from single unit Victorians in
-            residential neighborhoods, to multi-million dollar renovations like
-            that of the UCSF campus.
+            Selected fabrics for furniture re-upholstery, throw pillows, window
+            treatments, and custom headboards for a luxury resort in Tuscany.
           </p>
         </div>
       </div>
@@ -106,6 +98,13 @@
     <div class="section apps">
       <div class="content">
         <div class="app-box-wrapper">
+          <div class="app-box">
+            <img
+              title="AutoCAD"
+              width="100%"
+              src="images/autocad-logo.png"
+            />
+          </div>
           <div class="app-box">
             <img
               title="Adobe Photoshop"
@@ -127,9 +126,9 @@
               src="images/indesign-icon.svg"
             />
           </div>
-          <div class="app-box">
-            <img title="Asana" width="100%" src="images/asana-icon.png" />
-          </div>
+<!--          <div class="app-box">-->
+<!--            <img title="Asana" width="100%" src="images/asana-icon.png" />-->
+<!--          </div>-->
           <div class="app-box">
             <img
               title="Microsoft Excel"
@@ -143,6 +142,69 @@
           Illustrator, and Photoshop — and general management tools like Asana,
           Excel, Concur, et al.
         </p>
+      </div>
+    </div>
+    <div class="section colour-studio">
+      <div class="content">
+        <div class="job-header">
+          <h2>Colour Studio</h2>
+          <p class="position-title">Project Manager & Design Associate</p>
+          <p class="position-year">2017 - 2019</p>
+        </div>
+        <div class="image right">
+          <img src="images/sculpting.png" />
+          <p>
+            Deliverables included thorough diagrams of building details like
+            these unique facades seen around San Francisco.
+          </p>
+        </div>
+
+        <p class="main-content">
+          The Colour Studio is a boutique color consultancy that has operated in
+          San Francisco for over forty years. The company works primarily with
+          architecture firms and property management companies in California,
+          supporting the massive development in the area. As Project Manager and
+          Design Associate, I was responsible for leading all ongoing projects
+          from start to finish.
+        </p>
+
+        <p class="main-content">
+          My responsibilities at the company included generating proposals,
+          outlining scope, delegating project tasks, and maintaining daily
+          coordination with clients, designers, architects, developers,
+          contractors, et al. I also had a hand in creating and developing
+          design choices and presenting them to clients.
+        </p>
+
+        <p class="main-content">
+          One of the highlights of my experience there was working with the
+          older, more ornately-styled buildings of San Francisco. We enjoyed
+          designing bright and intricate schemes for these unique properties.
+          It’s now a pleasure of mine to spot building exteriors around the city
+          that I had a hand in creating.
+        </p>
+
+        <div class="image">
+          <img src="images/victorian-elevation.png" />
+          <p>
+            At every step, colors were meticulously matched from digital
+            screens, to ink prints, to final paint applications, guaranteeing an
+            accurate portrayal from start to finish.
+          </p>
+        </div>
+        <p class="main-content">
+          During my time at Colour Studio I drove many projects to completion,
+          including multiple 100+ unit residential projects around San
+          Francisco, Oakland, Mountain View, San Diego, and Los Angeles.
+        </p>
+        <div class="image">
+          <img src="images/Millberry%20Union.jpg" />
+          <p>
+            Our projects ranged in size from single unit Victorians in
+            residential neighborhoods, to multi-million dollar renovations like
+            that of the UCSF campus.
+          </p>
+        </div>
       </div>
     </div>
     <div class="section hack-reactor">
@@ -171,13 +233,13 @@
           ensure everything was properly prepared for the 50+ staff members and
           200+ students.
         </p>
-        <div class="image">
-          <img src="images/HR-four-pairs.jpg" />
-          <p>
-            I was always on hand to resolve any IT related issues for students
-            and staff.
-          </p>
-        </div>
+        <!--        <div class="image">-->
+        <!--          <img src="images/HR-four-pairs.jpg" />-->
+        <!--          <p>-->
+        <!--            I was always on hand to resolve any IT related issues for students-->
+        <!--            and staff.-->
+        <!--          </p>-->
+        <!--        </div>-->
         <p class="main-content">
           As the company grew and acquired smaller bootcamp start-ups, I
           assisted in the moving and opening of 3 locations.
@@ -188,11 +250,11 @@
       <div class="content">
         <div class="rtw-photos-wrapper"></div>
         <p class="main-content">
-          By the way! I most recently spent 5 months traveling around the world,
-          visiting 12 different countries. I met some amazing people, stayed in
-          some beautiful cities, and ate some delicious food. I learned a lot
-          about different cultures, but also about myself in the process. Ask me
-          about it!
+          By the way! Before the pandemic I spent 5 months traveling around the
+          world, visiting 12 different countries. I met some amazing people,
+          stayed in some beautiful cities, and ate some delicious food. I
+          learned a lot about different cultures, but also about myself in the
+          process. Ask me about it!
         </p>
       </div>
     </div>
